Add hungrylist svg

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,6 +1,6 @@
 /************************************
 *
-*   base
+*   base text 7ef692 lime
 *
 ************************************/
 
@@ -15,7 +15,7 @@ body {
 
 /************************************
 *
-*   navbar and navmenu
+*   navbar and navmenu 
 *
 ************************************/
 
