Add typeface script and logo label

--- a/client/templates/layouts/nav.html
+++ b/client/templates/layouts/nav.html
@@ -1,9 +1,14 @@
 <template name="nav">
 
 	<div class="navmenu navmenu-custom navmenu-fixed-left offcanvas-sm">
-        <a rel="home" href="#" title="Hungrylist">
-            <img src="hungrylist4.svg">
-        </a>
+
+        <div class="logo">
+            <a rel="home" href="#" title="Hungrylist">
+                <img src="hungrylist4.svg">
+            </a>
+            <h1> Hungrylist </h1>
+        </div>
+
         <ul class="nav navmenu-nav">
             <li><a href="../groceries">Groceries</a></li>
             <li><a href="../habits/">Habits</a></li>
