--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -59,9 +59,24 @@ body {
   background-color: #fff;
 }
 
+.logo {
+  padding:20px;
+}
 
+.logo > a {
+  width: 150px;
+  display: block;
+  margin: auto;
+}
 
-
+.logo > h1 {
+  font-family: ff-nuvo-web-pro;
+  font-weight: 900;
+  text-align: center;
+  letter-spacing: 2px;
+  color: #fff;
+  font-size: 3.2rem;
+}
 
 
 @media (min-width: 1px) {
@@ -69,13 +84,13 @@ body {
     display: block !important;
   }
   .navmenu, .navbar-offcanvas{
-    width: 200px;
+    width: 250px;
   }
 }
 
 @media (min-width: 992px) {
   body {
-    padding: 0 0 0 300px;
+    padding: 0 0 0 250px;
   }
   .navmenu {
     padding-top: 0;
@@ -84,19 +99,9 @@ body {
     display: none !important; /* IE8 fix */
   }
   .navmenu, .navbar-offcanvas{
-    width: 300px;
+    width: 250px;
   }
 }
-
-
-
-
-
-
-
-
-
-
 
 
 /************************************
