--- a/client/templates/layouts/nav.html
+++ b/client/templates/layouts/nav.html
@@ -10,9 +10,21 @@
         </div>
 
         <ul class="nav navmenu-nav">
-            <li><a href="../groceries">Groceries</a></li>
-            <li><a href="../habits/">Habits</a></li>
-            <li><a href="../preferences/">Preferences</a></li>
+            <li>
+                <p class="navbar-btn">
+                    <a id="shopping" href="#" class="btn btn-custom">Go shopping!</a>
+                </p>
+            </li>
+            <li>
+                <p class="navbar-btn">
+                    <a href="#" class="btn btn-custom">Habits</a>
+                </p>
+            </li>
+            <li>
+                <p class="navbar-btn">
+                    <a href="#" class="btn btn-custom">Preferences</a>
+                </p>
+            </li>
         </ul>
     </div>
 
