Add navmenu animations and begin building shop template

--- a/client/templates/layouts/layout.html
+++ b/client/templates/layouts/layout.html
@@ -1,7 +1,8 @@
 <template name="layout">
 	{{ > nav }}
 
-	<section class="wall"></section>
-	{{ > yield }}
+	<section class="wall">
+	{{ > yield }}	
+	</section>
 	
 </template>
