--- a/client/templates/layouts/nav.html
+++ b/client/templates/layouts/nav.html
@@ -2,17 +2,17 @@
 
 	<div class="navmenu navmenu-custom navmenu-fixed-left offcanvas-sm">
 
-        <div class="logo">
-            <a rel="home" href="#" title="Hungrylist">
+        <div id="logo">
+            <a rel="home" href="/" >
                 <img src="hungrylist4.svg">
+                <h1> Hungrylist </h1>
             </a>
-            <h1> Hungrylist </h1>
         </div>
 
         <ul class="nav navmenu-nav">
             <li>
                 <p class="navbar-btn">
-                    <a id="shopping" href="#" class="btn btn-custom">Go shopping!</a>
+                    <a id="shopping" href="/shop" class="btn btn-custom">Go shopping!</a>
                 </p>
             </li>
             <li>
