--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,8 +1,5 @@
-/************************************
-*
-*   base text 7ef692 lime
-*
-************************************/
+@import 'anim/bounce';
+@import 'anim/pulse';
 
 html, body {
   height: 100%;
@@ -53,23 +50,32 @@ body {
   background-color: #fff;
 }
 
-.logo {
+// logo area
+#logo {
   padding:20px;
-}
 
-.logo > a {
-  width: 150px;
-  display: block;
-  margin: auto;
-}
+  > a:hover {
+      text-decoration:none;
 
-.logo > h1 {
-  font-family: ff-nuvo-web-pro;
-  font-weight: 900;
-  text-align: center;
-  letter-spacing: 3px;
-  color: #fff;
-  font-size: 3.2rem;
+      img {
+        @include bounce;
+      }
+  }
+
+  img {
+    width: 150px;
+    display: block;
+    margin: auto;
+  }
+
+  h1 {
+    font-family: ff-nuvo-web-pro;
+    font-weight: 900;
+    text-align: center;
+    letter-spacing: 3px;
+    color: #fff;
+    font-size: 3.2rem;
+  }
 }
 
 .btn-custom {
@@ -87,7 +93,7 @@ body {
   width: 100%;
 }
 
-.btn-custom:hover, .btn-custom:active {
+.btn-custom:hover, .btn-custom:active , .btn-custom:focus{
   color: #fff;
   background-color: #413B48;
 }
@@ -101,7 +107,13 @@ body {
   padding-left: 0px;
 }
 
-#shopping:hover, #shopping:active{
+#shopping:hover {
+  color: #fff;
+  background-color: #00D672;
+  @include pulse;
+}
+
+#shopping:active, #shopping:focus{
   color: #fff;
   background-color: #00D672;
 }
@@ -139,8 +151,8 @@ body {
 ************************************/
 
 .wall {
-  position: relative;
   width: 100%;
   height: 100%;
+  position: relative;
   background-color: #1c1920;
 }
