--- a/client/templates/shop/shop.html
+++ b/client/templates/shop/shop.html
@@ -3,16 +3,106 @@
 		<h1 style="color:#fff;"> Select items to buy. </h1>
 		<div class="row">
 			<div class="col-xs-8">
-				<button type="button" class="btn btn-buy">Cheez-its</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
-				<button type="button" class="btn btn-buy">Example item</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left">Cheez-its</div>
+						<div class="col-xs-6 buy-right">90%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $3 </div>
+						<div class="col-xs-6 buy-under-right"> Snack </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left">Tostitos</div>
+						<div class="col-xs-6 buy-right">80%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $2 </div>
+						<div class="col-xs-6 buy-under-right"> Snack </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left">Toilet paper</div>
+						<div class="col-xs-6 buy-right">70%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $12 </div>
+						<div class="col-xs-6 buy-under-right"> Essential </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left">Paper towels</div>
+						<div class="col-xs-6 buy-right">60%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $10 </div>
+						<div class="col-xs-6 buy-under-right"> Essential </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left">Earl Gray Tea</div>
+						<div class="col-xs-6 buy-right">50%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $5 </div>
+						<div class="col-xs-6 buy-under-right"> Grocerie </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left">Clif Bars</div>
+						<div class="col-xs-6 buy-right">40%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $25 </div>
+						<div class="col-xs-6 buy-under-right"> General </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left"> Dr Pepper </div>
+						<div class="col-xs-6 buy-right">30%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $4 </div>
+						<div class="col-xs-6 buy-under-right"> Beverage </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left"> Wheatena </div>
+						<div class="col-xs-6 buy-right">20%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $3 </div>
+						<div class="col-xs-6 buy-under-right"> Breakfast </div>
+					</div>
+				</button>
+
+				<button type="button" class="btn btn-buy">
+					<div class="row">
+						<div class="col-xs-6 buy-left"> Ketchup </div>
+						<div class="col-xs-6 buy-right">10%</div>
+					</div>
+					<div class="row extend">
+						<div class="col-xs-6 buy-under-left"> $3 </div>
+						<div class="col-xs-6 buy-under-right"> Grocerie </div>
+					</div>
+				</button>
+
 			</div>
 			<div class="col-xs-4"></div>
 		</div>
