Add custom scrollbar build out buy list animations tweak responsiveness

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -156,4 +156,13 @@ body {
   height: 100%;
   position: relative;
   background-color: #1c1920;
+
+  > div {
+    height: inherit;
+
+    > div {
+      height: 90%;
+      
+    }
+  }
 }
