Finalize buy list scrolling

--- a/client/templates/shop/shop.html
+++ b/client/templates/shop/shop.html
@@ -55,7 +55,7 @@
 						</div>
 						<div class="row extend">
 							<div class="col-xs-6 buy-under-left"> $5 </div>
-							<div class="col-xs-6 buy-under-right"> Grocerie </div>
+							<div class="col-xs-6 buy-under-right"> Grocery </div>
 						</div>
 					</button>
 
@@ -99,7 +99,7 @@
 						</div>
 						<div class="row extend">
 							<div class="col-xs-6 buy-under-left"> $3 </div>
-							<div class="col-xs-6 buy-under-right"> Grocerie </div>
+							<div class="col-xs-6 buy-under-right"> Grocery </div>
 						</div>
 					</button>
 
@@ -154,7 +154,7 @@
 						</div>
 						<div class="row extend">
 							<div class="col-xs-6 buy-under-left"> $5 </div>
-							<div class="col-xs-6 buy-under-right"> Grocerie </div>
+							<div class="col-xs-6 buy-under-right"> Grocery </div>
 						</div>
 					</button>
 
@@ -198,10 +198,12 @@
 						</div>
 						<div class="row extend">
 							<div class="col-xs-6 buy-under-left"> $3 </div>
-							<div class="col-xs-6 buy-under-right"> Grocerie </div>
+							<div class="col-xs-6 buy-under-right"> Grocery </div>
 						</div>
 					</button>
-				
+
+					<div class="buffer"></div>
+
 				</div>
 			</div>
 			<div class="col-md-4 col-lg-5 hidden-xs"></div>
