Fix svgs and begin items template

--- a/client/templates/layouts/nav.html
+++ b/client/templates/layouts/nav.html
@@ -17,12 +17,12 @@
             </li>
             <li>
                 <p class="navbar-btn">
-                    <a href="#" class="btn btn-custom">Habits</a>
+                    <a href="/items" class="btn btn-custom">Your Items</a>
                 </p>
             </li>
             <li>
                 <p class="navbar-btn">
-                    <a href="#" class="btn btn-custom">Preferences</a>
+                    <a href="/habits" class="btn btn-custom">Your Habits</a>
                 </p>
             </li>
         </ul>
