--- a/client/templates/shop/shop.html
+++ b/client/templates/shop/shop.html
@@ -201,12 +201,17 @@
 							<div class="col-xs-6 buy-under-right"> Grocery </div>
 						</div>
 					</button>
-
 					<div class="buffer"></div>
 
 				</div>
 			</div>
-			<div class="col-md-4 col-lg-5 hidden-xs"></div>
+			<div class="col-md-4 col-lg-5 hidden-xs">
+			 	<div id="bag">
+        	<a rel="home" href="/" >
+            <img src="hungrylist-bag2.svg">
+          </a>
+        </div>
+      </div>
 		</div>
 	</div>
 </template>
