Fix buy-list padding and work on items template

--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -14,9 +14,7 @@
 						<h1>price</h1>
 					</div>				
 					<div class="col-xs-12 col-sm-6">
-						<h1>color</h1>
-						<h1>suggestion</h1>
-						<h1>price</h1>
+						color, suggestion, price
 					</div>
 				</div>
 			</div>
