--- a/client/templates/shop/shop.html
+++ b/client/templates/shop/shop.html
@@ -208,7 +208,7 @@
 			<div class="col-md-4 col-lg-5 hidden-xs">
 			 	<div id="bag">
         	<a rel="home" href="/" >
-            <img src="hungrylist-bag2.svg">
+            <img src="hungrylist-bag.svg">
           </a>
         </div>
       </div>
