Fix button height issue and begin item page styling

--- a/client/templates/shop/shop.html
+++ b/client/templates/shop/shop.html
@@ -10,7 +10,7 @@
 						<button type="button" class="btn btn-buy btn-shy" style="width: {{style}};">
 							<div class="row">
 								<div class="col-xs-8 buy-left">{{name}}</div>
-								<div class="col-xs-4 buy-right">{{suggestion}}</div>
+								<div class="buy-right">{{suggestion}}</div>
 							</div>
 							<div class="row extend">
 								<div class="col-xs-6 buy-under-left"> ${{price}} </div>
