--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -1,7 +1,7 @@
 <template name="items">
-	<div class="container">
+	<div id ="item-details" class="container">
 		<div class="row">
-			<div class="col-xs-12 col-sm-10">
+			<div class="col-xs-12 col-sm-9 item-fields">
 				<div class="row">
 					<div class="col-xs-12">
 						<h1>Add or Edit an Item</h1>
@@ -116,10 +116,10 @@
 			</div>
 
 
-			<div class="col-xs-12 col-sm-2">
+			<div class="col-xs-12 col-sm-3 item-accept">
 				<div class="control-group">
 				  <div class="controls">
-				    <button id="set-item" name="set-item" class="btn btn-success btn-lg">Set Item</button>
+				    <button id="set-item" name="set-item" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-plus"></span></button>
 				  </div>
 				</div>
 			</div>
