Fix buffer hide in shop

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,6 +10,10 @@ body {
   padding: 0 0 0 0;
 }
 
+.wf-loading {
+  visibility: hidden;
+}
+
 /************************************
 *
 *   navbar and navmenu 
