--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -1,5 +1,5 @@
 <template name="items">
-	<div id ="item-details" class="container">
+	<div id ="item-details" class="container container-fix">
 		<div class="row">
 			<div class="col-xs-12 col-sm-9 item-fields">
 				<div class="row">
