Add jquery height mod in buy list Setup userId property on tasks and buy list filtering

--- a/client/templates/layouts/nav.html
+++ b/client/templates/layouts/nav.html
@@ -26,6 +26,7 @@
                 </p>
             </li>
         </ul>
+        {{ >loginButtons }}
     </div>
 
     <div class="navbar navbar-custom navbar-fixed-top hidden-md hidden-lg">
