--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,12 +1,15 @@
 <template name="login">
-	<div class="container">
-		
-		<div id="login">
+
+	<div style="background-color:#1C1920; height:100%;">
+
+		<div id="login" class="container-fluid">
+
 			<h1> Welcome to <span>Hungrylist.</span> </h1>
 
+
 			<img src="hungrylist-mouth.svg">
-
-
-		</div>
+			{{ >loginButtons }}
+		</div> 
 	</div>
+
 </template>
