--- a/client/styles/login.scss
+++ b/client/styles/login.scss
@@ -1,9 +1,7 @@
 #login {
 
 	height:100%;
-	width: 100%;
-	position: absolute;
-	background-color: #1C1920;
+
 
 	h1 {
 		margin-top: 200px;
@@ -21,11 +19,14 @@
 
 
 	img {
-	    position: absolute;
-	    width: 50%;
-	    bottom: -200px;
-	    margin-right: 25%;
-	    margin-left: 25%;
+		position: absolute;
+	    max-width: 1200px;
 	    opacity: .5;
+	    margin-right: auto;
+	    margin-left: auto;
+
+	    left: 0;
+	    righT: 0;
+	    bottom: 0;
 	}
 }
