--- a/client/templates/shop/shop.html
+++ b/client/templates/shop/shop.html
@@ -2,7 +2,7 @@
 	<div id="shop" class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8 col-lg-7">
-				<div class="row">
+				<div id="buy-top" class="row">
 					<div class="col-xs-10">
 						<input id="filter-input" placeholder="Type to filter" autofocus>
 					</div>
@@ -10,7 +10,7 @@
 					<!-- <div class="col-xs-2">
 						<span id="filter-remove" class="glyphicon glyphicon-remove"></span>
 					</div> -->
-					
+
 				</div>
 
         		<div class="row buy-list">
